[gd_scene load_steps=11 format=3 uid="uid://cveqhxji75y0m"]

[ext_resource type="Script" path="res://Scripts/UI/Menu.gd" id="1_bn3uy"]
[ext_resource type="Texture2D" uid="uid://d1tbr0ilsod1r" path="res://Sprites/Background/MenuLeft.png" id="4_p61hg"]
[ext_resource type="FontFile" uid="uid://cp82b0ynqncou" path="res://Sprites/Background/Cinzel-VariableFont_wght.ttf" id="4_xqy0n"]
[ext_resource type="Texture2D" uid="uid://dbbuhe06xdfmu" path="res://Sprites/Background/MenuRight.png" id="5_1xiep"]
[ext_resource type="Texture2D" uid="uid://c10ih574xkqye" path="res://Sprites/Background/ButtonTest.png" id="5_522kq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mebes"]
texture = ExtResource("5_522kq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_olyx4"]
texture = ExtResource("5_522kq")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_041t2"]

[sub_resource type="SystemFont" id="SystemFont_hd5dk"]

[sub_resource type="LabelSettings" id="LabelSettings_mt4j5"]
font = SubResource("SystemFont_hd5dk")
font_size = 60
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.86
script = ExtResource("1_bn3uy")

[node name="MenuLeft" type="Sprite2D" parent="."]
position = Vector2(-277, 0)
texture = ExtResource("4_p61hg")

[node name="MenuRight" type="Sprite2D" parent="."]
position = Vector2(287, 0)
texture = ExtResource("5_1xiep")

[node name="Start" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -73.0
offset_right = 184.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_filter = 1
theme_override_fonts/font = ExtResource("4_xqy0n")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_mebes")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Come√ßar"
icon_alignment = 1
expand_icon = true

[node name="Quit" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.0
offset_top = 67.0
offset_right = 184.0
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_filter = 1
theme_override_fonts/font = ExtResource("4_xqy0n")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_olyx4")
theme_override_styles/hover = SubResource("StyleBoxFlat_041t2")
text = "Sair"
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = -193.0
offset_top = -199.0
offset_right = 212.0
offset_bottom = -116.0
text = "Magic Pieces"
label_settings = SubResource("LabelSettings_mt4j5")

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
